# dict-ai-te

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  README_recording.md  WEBUI.md  architecture-guide.html  architecture-guide.md  demoswitch.sh  pyproject.toml
.github/: copilot-instructions.md
.github/examples/: delivery-transformation-report.html
.github/prompts/: create-structured-html-report.prompt.md  edit-structured-html-report.prompt.md
.github/skills/structured-html-report-skill/: SKILL.md
.github/templates/: component-patterns.html  report-shell.html
dictaite/: __init__.py  __main__.py  api.py  config.py  constants.py  gtk_app.py  ui_common.py  web.py
dictaite/ui_gtk/: __init__.py  app.py  bootstrap.py  live.py
dictaite/ui_web/: __init__.py  app.py
dictaite/ui_web/static/css/: app.css
dictaite/ui_web/static/js/: app.js  record.js  settings.js
dictaite/ui_web/templates/: index.html  settings.html
dictaite_core/: __init__.py  config.py
dictaite_core/realtime/: __init__.py  audio.py  events.py  models.py  settings.py  transcript.py  transport.py
dictaite_core/services/: __init__.py  _client.py  stt.py  text_utils.py  translate.py  tts.py
img/: design-dict-ai-te-window.xcf  dict-ai-te-mac.xcf  dict-ai-te-ubuntu.xcf  dict-ai-te-window.xcf  dictaite.xcf
openspec/changes/complete-realtime-rust-and-api-validation/: design.md  proposal.md  tasks.md  verification.md
openspec/changes/complete-realtime-rust-and-api-validation/specs/live-manual-acceptance/: spec.md
openspec/changes/complete-realtime-rust-and-api-validation/specs/realtime-api-contract-validation/: spec.md
openspec/changes/complete-realtime-rust-and-api-validation/specs/rust-live-realtime-integration/: spec.md
openspec/changes/realtime-transcription-translation/: design.md  proposal.md  tasks.md
openspec/changes/realtime-transcription-translation/specs/live-first-ui/: spec.md
openspec/changes/sync-python-to-rust-parity/: design.md  proposal.md  tasks.md
specs/: 2025-09-17-01-AGENTS.md  2025-09-18-01-AGENTS.md  2025-09-18-02-AGENTS.md  2026-05-15-change-to-gpt-realtime-whisper-and-translate.md  ARCHITECTURE.md
src/: app.rs  constants.rs  error.rs  main.rs  openai.rs  settings.rs  text_utils.rs
src/audio/: clip.rs  live_capture.rs  mod.rs  player.rs  recorder.rs
src/realtime/: audio.rs  events.rs  mod.rs  state.rs  transcript.rs  transport.rs
tests/: conftest.py  test_api.py  test_realtime.py  test_services.py
(+6 files in other folders)
