[package]
name = "dict_ai_te"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
arboard = "3.3"
cpal = { version = "0.15", features = ["jack"] }
dirs = "5.0"
dotenvy = "0.15"
eframe = { version = "0.34", features = ["wgpu", "x11", "wayland"] }
egui = "0.34"
env_logger = "0.11"
hound = "3.5"
once_cell = "1.19"
parking_lot = "0.12"
poll-promise = "0.3"
log = "0.4"
regex = "1.10"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart", "rustls-tls"] }
base64 = "0.22"
rodio = "0.17"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
tokio = { version = "1.37", features = ["rt-multi-thread", "sync", "macros"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
rubato = "0.15"
